we got something going

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-webview": "13.13.5",
     "expo-auth-session": "~6.2.1",
     "expo-crypto": "~14.1.5",
-    "expo-secure-store": "~14.2.3"
+    "expo-secure-store": "~14.2.3",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
