--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "expo-auth-session": "~6.2.1",
     "expo-crypto": "~14.1.5",
     "expo-secure-store": "~14.2.3",
-    "expo-dev-client": "~5.2.4"
+    "expo-dev-client": "~5.2.4",
+    "expo-sqlite": "~15.2.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
