--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@tanstack/query-async-storage-persister": "^5.85.5",
     "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-query-persist-client": "^5.85.5",
     "expo": "~53.0.20",
     "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.5",
