let's do a pipeline

--- a/app.json
+++ b/app.json
@@ -50,6 +50,6 @@
         "projectId": "2b6afc00-a0f1-4df2-b0f0-37df66f002e0"
       }
     },
-    "owner": "srkirkland"
+    "owner": "ucdavis"
   }
 }
