--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,22 +1,16 @@
 trigger:
-  branches:
-    include:
-      - main
+  branches: [main]
 pr:
-  branches:
-    include:
-      - "*"
+  branches: ["*"]
 
 variables:
-  - group: Secrets
-  - name: NODE_VERSION
-    value: "20.x"
+  NODE_VERSION: "20.x"
 
 stages:
-  - stage: CI
-    displayName: Lint/Test
+  - stage: Checks
+    displayName: Fast checks (no builds)
     jobs:
-      - job: checks
+      - job: fast_checks
         pool:
           vmImage: "ubuntu-latest"
         steps:
@@ -24,62 +18,53 @@ stages:
             inputs:
               versionSpec: "$(NODE_VERSION)"
             displayName: "Use Node $(NODE_VERSION)"
+
           - script: corepack enable
             displayName: "Enable Corepack (pnpm/yarn if you use them)"
 
-          # try caching but we can remove if it causes issues
           - task: Cache@2
             inputs:
               key: 'npm | "$(Agent.OS)" | $(Build.SourcesDirectory)/package-lock.json'
               path: "$(Pipeline.Workspace)/.npm"
               restoreKeys: 'npm | "$(Agent.OS)" |'
             displayName: "Cache NPM"
+
           - script: |
               export NPM_CONFIG_CACHE="$(Pipeline.Workspace)/.npm"
               npm ci
             displayName: "Install deps"
-          - script: npm run test --if-present
-            displayName: "Run tests"
 
-      # --- iOS PREVIEW for PRs ---
-      - job: ios_preview
-        dependsOn: checks
-        displayName: "iOS (preview) on PR"
-        condition: eq(variables['Build.Reason'], 'PullRequest')
-        pool: { vmImage: "ubuntu-latest" }
-        steps:
-          - task: NodeTool@0
-            inputs: { versionSpec: "$(NODE_VERSION)" }
-          - script: npm ci
-            displayName: "Install deps"
-          - script: |
-              npx --yes eas-cli@latest build \
-                --platform ios \
-                --profile preview \
-                --non-interactive \
-                --no-wait
-            env:
-              EXPO_TOKEN: $(EXPO_TOKEN)
-            displayName: "Trigger EAS iOS (preview)"
+          # health checks (Expo Doctor)
+          - script: npx --yes expo-doctor
+            displayName: "expo-doctor"
 
-      # --- iOS PROD on main ---
-      - job: ios_prod
-        dependsOn: checks
-        displayName: "iOS (production)"
-        condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
-        pool: { vmImage: "ubuntu-latest" }
-        steps:
-          - task: NodeTool@0
-            inputs: { versionSpec: "$(NODE_VERSION)" }
-          - script: npm ci
-            displayName: "Install deps"
-          - script: |
-              npx --yes eas-cli@latest build \
-                --platform ios \
-                --profile production \
-                --non-interactive \
-                --no-wait \
-                --auto-submit
-            env:
-              EXPO_TOKEN: $(EXPO_TOKEN)
-            displayName: "Trigger EAS iOS (prod + submit)"
+          - script: npm run typecheck
+            displayName: "Typecheck"
+
+          - script: npm run lint
+            displayName: "ESLint"
+
+          # # 4) Tests (+ JUnit + coverage if configured)
+          # - script: npm run test:ci --if-present || npx jest --ci
+          #   displayName: "Unit tests (Jest)"
+
+          # - task: PublishTestResults@2
+          #   condition: succeededOrFailed()
+          #   inputs:
+          #     testResultsFormat: "JUnit"
+          #     testResultsFiles: "**/junit.xml"
+          #     failTaskOnFailedTests: true
+          #     testRunTitle: "Jest"
+
+          # - task: PublishCodeCoverageResults@2
+          #   condition: succeededOrFailed()
+          #   inputs:
+          #     codeCoverageTool: "Cobertura"
+          #     summaryFileLocation: "$(System.DefaultWorkingDirectory)/**/cobertura-coverage.xml"
+          #     reportDirectory: "$(System.DefaultWorkingDirectory)/**/coverage"
+          #     failIfCoverageEmpty: false
+
+          # quick bundle smoke test (catches Metro/bundle errors)
+          - script: npx expo export --no-source-map
+            displayName: "Bundle smoke test (Metro export)"
+            continueOnError: true # flip to false if you want it to gate PRs
