Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,11 @@
 trigger:
-  branches: [main]
+  branches:
+    include:
+      - main
 pr:
-  branches: ["*"]
+  branches:
+    include:
+      - "*"
 
 variables:
   NODE_VERSION: "20.x"
