--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo": "53.0.22",
     "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.11",
     "expo-constants": "~17.1.7",
     "expo-crypto": "~14.1.5",
     "expo-dev-client": "~5.2.4",
