--- a/app.json
+++ b/app.json
@@ -52,7 +52,12 @@
           "organization": "ucdavis"
         }
       ],
-      ["expo-camera", { "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera" }]
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow Harvest to access your camera"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
