--- a/app.json
+++ b/app.json
@@ -12,6 +12,9 @@
       "config": {
         "usesNonExemptEncryption": false
       },
+      "infoPlist": {
+        "NSCameraUsageDescription": "We use the camera to scan QR codes for rates/expenses."
+      },
       "supportsTablet": true,
       "bundleIdentifier": "com.ucdavis.harvest-mobile",
       "runtimeVersion": "1.0.0"
