pre build changes

--- a/app.json
+++ b/app.json
@@ -27,7 +27,14 @@
       "edgeToEdgeEnabled": true,
       "runtimeVersion": {
         "policy": "appVersion"
-      }
+      },
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "com.ucdavis.harvestmobile"
     },
     "web": {
       "bundler": "metro",
