--- a/ios/sentry.properties
+++ b/ios/sentry.properties
@@ -1,6 +1,4 @@
-# Sentry configuration
-# auth.token is set via environment variable SENTRY_AUTH_TOKEN
+defaults.url=https://sentry.io/
 defaults.org=ucdavis
 defaults.project=harvest-mobile
-
-defaults.url=https://sentry.io/
+# Using SENTRY_AUTH_TOKEN environment variable
