--- a/app.json
+++ b/app.json
@@ -17,7 +17,11 @@
       },
       "supportsTablet": true,
       "bundleIdentifier": "com.ucdavis.harvest-mobile",
-      "runtimeVersion": "1.0.0"
+      "runtimeVersion": "1.0.0",
+      "userInterfaceStyle": "light",
+      "ios": {
+        "userInterfaceStyle": "light"
+      }
     },
     "android": {
       "adaptiveIcon": {
