--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "expo-build-disk-cache": "^0.7.0",
     "typescript": "~5.8.3"
   },
   "jest-junit": {
