fix cache provider and directory checks

--- a/app.json
+++ b/app.json
@@ -8,6 +8,15 @@
     "scheme": "harvestmobile",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "buildCacheProvider": {
+      "plugin": "expo-build-disk-cache"
+    },
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": ["react-native-heroicons"],
+        "listUnknownPackages": false
+      }
+    },
     "ios": {
       "config": {
         "usesNonExemptEncryption": false
@@ -69,10 +78,7 @@
       ]
     ],
     "experiments": {
-      "typedRoutes": true,
-      "buildCacheProvider": {
-        "plugin": "expo-build-disk-cache"
-      }
+      "typedRoutes": true
     },
     "extra": {
       "router": {},
