--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@sentry/react-native": "^7.1.0",
+    "@sentry/react-native": "~6.14.0",
     "@tanstack/query-async-storage-persister": "^5.85.5",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-persist-client": "^5.85.5",
-    "expo": "53.0.22",
+    "expo": "~53.0.23",
     "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.11",
@@ -36,7 +36,7 @@
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
     "expo-network": "~7.1.5",
-    "expo-router": "~5.1.6",
+    "expo-router": "~5.1.7",
     "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.10",
     "expo-sqlite": "~15.2.14",
