--- a/app.json
+++ b/app.json
@@ -66,7 +66,9 @@
         {
           "cameraPermission": "Allow Harvest to access your camera"
         }
-      ]
+      ],
+      "expo-font",
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true,
