Configures build cache directory
Configures the build cache to use a directory within the node_modules folder.

This ensures consistent cache locations and avoids potential permission issues or conflicts in different environments.

--- a/app.json
+++ b/app.json
@@ -73,7 +73,10 @@
     "experiments": {
       "typedRoutes": true,
       "buildCacheProvider": {
-        "plugin": "expo-build-disk-cache"
+        "plugin": "expo-build-disk-cache",
+        "options": {
+          "cacheDir": "node_modules/.expo-build-disk-cache"
+        }
       }
     },
     "extra": {
