Updates the runtime version policy
Ensures the application uses the correct runtime version
based on the app version.

This change streamlines future updates.

--- a/app.json
+++ b/app.json
@@ -17,7 +17,9 @@
       },
       "supportsTablet": true,
       "bundleIdentifier": "com.ucdavis.harvest-mobile",
-      "runtimeVersion": "1.0.0",
+      "runtimeVersion": {
+        "policy": "appVersion"
+      },
       "userInterfaceStyle": "dark"
     },
     "android": {
