--- a/eas.json
+++ b/eas.json
@@ -6,15 +6,25 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_LOGIN_URL": "https://harvest-test.azurewebsites.net/mobileToken"
+      }
     },
     "preview": {
       "channel": "preview",
-      "distribution": "internal"
+      "distribution": "internal",
+      "autoIncrement": true,
+      "env": {
+        "EXPO_PUBLIC_LOGIN_URL": "https://harvest-test.azurewebsites.net/mobileToken"
+      }
     },
     "production": {
       "channel": "production",
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "EXPO_PUBLIC_LOGIN_URL": "https://harvest.caes.ucdavis.edu/mobileToken"
+      }
     }
   },
   "submit": {
