preview build support

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "clean": "expo prebuild --clean",
-    "build:ios": "./scripts/build-ios.sh",
+    "build:ios": "./scripts/build-ios.sh production",
+    "build:ios:preview": "./scripts/build-ios.sh preview",
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
