--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-auth-session": "~7.0.8",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
+    "expo-checkbox": "~5.0.7",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
     "expo-dev-client": "~6.0.15",
