--- a/app.json
+++ b/app.json
@@ -70,7 +70,15 @@
         }
       ],
       "expo-font",
-      "expo-web-browser"
+      "expo-web-browser",
+      [
+        "expo-localization",
+        {
+          "supportedLocales": {
+            "ios": ["en", "es"]
+          }
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true,
