--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.8",
+    "expo-localization": "~17.0.7",
     "expo-network": "~8.0.7",
     "expo-router": "~6.0.13",
     "expo-secure-store": "~15.0.7",
@@ -49,6 +50,7 @@
     "expo-system-ui": "~6.0.7",
     "expo-updates": "~29.0.12",
     "expo-web-browser": "~15.0.8",
+    "i18n-js": "^4.5.2",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
